fix: scroll smooth, overflow hidden

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,10 +9,16 @@
     margin: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     min-width: 320px;
     min-height: 100vh;
+    overflow-x: hidden;
+    scroll-padding-top: 5vh;
 }
 
 a {
